7 fields updated for users collections
